--- a/src/app/pages/home/components/produtos-header/produtos-header.component.html
+++ b/src/app/pages/home/components/produtos-header/produtos-header.component.html
@@ -1,7 +1,43 @@
-<mat-card class="mb-4">
+<mat-card class="mb-4 p-6">
   <div class="flex justify-between">
     <div>
-      <button mat-button>Filtrar por desc</button>
+      <button mat-button [matMenuTriggerFor]="sortByMenu">
+        <!-- variavel pega dentro de produtos-header.components.ts -->
+        Filtrar por {{ sort }}
+        <mat-icon>expand_more</mat-icon>
+      </button>
+
+      <mat-menu #sortByMenu="matMenu" class="p-6">
+        <button (click)="onSortUpdated('ascendente')" mat-menu-item>
+          ascendente
+        </button>
+        <button (click)="onSortUpdated('descendente')" mat-menu-item>
+          descendente
+        </button>
+      </mat-menu>
+    </div>
+    <div class="flex items-center">
+      <div>
+        <button mat-button [matMenuTriggerFor]="menu">
+          Mostrar {{ itemsShowCount }}
+          <mat-icon>expand_more</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <!-- quantos items por pagina -->
+          <button (click)="onItemsUpdated(12)" mat-menu-item>12</button>
+          <button (click)="onItemsUpdated(24)" mat-menu-item>24</button>
+          <button (click)="onItemsUpdated(36)" mat-menu-item>36</button>
+        </mat-menu>
+      </div>
+      <button (click)="onColumnsUpdated(1)">
+        <mat-icon>view_list</mat-icon>
+      </button>
+      <button (click)="onColumnsUpdated(3)">
+        <mat-icon>view_module</mat-icon>
+      </button>
+      <button (click)="onColumnsUpdated(4)">
+        <mat-icon>view_comfy</mat-icon>
+      </button>
     </div>
   </div>
 </mat-card>
