--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,9 +3,21 @@
   class="min-h-full max-w-7xl mx-auto border-x"
 >
   <mat-drawer mode="side" opened class="p-6">
-    <div>Filtros</div>
+    <app-filters (showCategoria)="onShowCategory($event)"></app-filters>
   </mat-drawer>
   <mat-drawer-content class="p-6">
-    <app-produtos-header></app-produtos-header>
+    <!-- evento columnsCountChange que irá ser ativado quando mudarmos o valor da variavel @output columnsCountChange -->
+    <app-produtos-header
+      (columnsCountChange)="onColumnsCountChange($event)"
+    ></app-produtos-header>
+    <mat-grid-list gutterSize="16" [cols]="cols" [rowHeight]="rowHeight">
+      <mat-grid-tile>
+        <app-product-box
+          (addToCart)="onAddToCart($event)"
+          class="w-full"
+          [fullWidthMode]="cols === 1"
+        ></app-product-box>
+      </mat-grid-tile>
+    </mat-grid-list>
   </mat-drawer-content>
 </mat-drawer-container>
