--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -26,11 +26,11 @@
       <th mat-header-cell *matHeaderCellDef>Quantidade</th>
 
       <td mat-cell *matCellDef="let element">
-        <button mat-icon-button>
+        <button (click)="onRemoveQuantity(element)" mat-icon-button>
           <mat-icon>remove</mat-icon>
         </button>
         <span>{{ element.quantity }}</span>
-        <button mat-icon-button>
+        <button (click)="onAddQuantity(element)" mat-icon-button>
           <mat-icon>add</mat-icon>
         </button>
       </td>
@@ -49,12 +49,22 @@
     </ng-container>
     <ng-container matColumnDef="Ações">
       <th mat-header-cell *matHeaderCellDef>
-        <button mat-raised-button color="warn" class="float-right">
+        <button
+          (click)="onClearCart()"
+          mat-raised-button
+          color="warn"
+          class="float-right"
+        >
           Clear All
         </button>
       </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-mini-fab color="warn" class="float-right">
+        <button
+          (click)="onRemoveFromCart(element)"
+          mat-mini-fab
+          color="warn"
+          class="float-right"
+        >
           <mat-icon>close</mat-icon>
         </button>
       </td>
