--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,10 +9,13 @@
     <!-- evento columnsCountChange que irá ser ativado quando mudarmos o valor da variavel @output columnsCountChange -->
     <app-produtos-header
       (columnsCountChange)="onColumnsCountChange($event)"
+      (itemsCountChange)="onItemsCountChange($event)"
+      (sortChange)="onSortChange($event)"
     ></app-produtos-header>
     <mat-grid-list gutterSize="16" [cols]="cols" [rowHeight]="rowHeight">
-      <mat-grid-tile>
+      <mat-grid-tile *ngFor="let product of products">
         <app-product-box
+          [product]="product"
           (addToCart)="onAddToCart($event)"
           class="w-full"
           [fullWidthMode]="cols === 1"
